--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "glitch-desktop",
+  "name": "discordimages-desktop",
   "version": "0.0.1",
-  "description": "Glitch Desktop App",
+  "description": "Discord Images Desktop App",
   "main": "./src/index.js",
   "dependencies": {
     "axios": "^0.18.0",
@@ -18,12 +18,12 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/boltxyz/glitch-desktop.git"
+    "url": "git+https://github.com/discord-images/desktop-app.git"
   },
-  "author": "boltxyz",
+  "author": "iamluca",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/boltxyz/glitch-desktop/issues"
+    "url": "https://github.com/discord-images/desktop-app/issues"
   },
-  "homepage": "https://github.com/boltxyz/glitch-desktop#readme"
+  "homepage": "https://github.com/discord-images/desktop-app#readme"
 }
